# investigator-core

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  report.html  setup.py
.github/workflows/: publish.yml
investigator/: __init__.py  case_manager.py  cli.py  config.py  dashboard.py
investigator/analyzers/: __init__.py  ioc_harvester.py  pcap_analyzer.py  volatility_analyzer.py
investigator/orchestrator/: __init__.py  runner.py  workflow.py
investigator/reports/: __init__.py  evidence_locker.py  report_generator.py
investigator/scanners/: __init__.py  base.py  http_scanner.py  nmap_scanner.py  port_scanner.py  subdomain_enum.py
investigator/utils/: color_out.py  helpers.py
investigator_core.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
